force-app/main/default/objects/Location__c/fields/Address_Error__c.field-meta.xml
<CustomField>
    <fullName>Address_Error__c</fullName>
    <label>Address Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>