force-app/main/default/objects/Location__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <description>Captures the first line of a host location&#39;s address.</description>
    <label>Address Line 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>