force-app/main/default/objects/Location__c/fields/Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_3__c</fullName>
    <description>The third line of a location&#39;s address.</description>
    <label>Address Line 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>