force-app/main/default/objects/Location__c/fields/Address_Override__c.field-meta.xml
<CustomField>
    <fullName>Address_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Overrides the standardization of an address through USPS.</description>
    <label>Do Not Attempt Address Standardization</label>
    <type>Checkbox</type>
</CustomField>