force-app/main/default/objects/Location__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The location&#39;s city.</description>
    <inlineHelpText>Enter the location&#39;s city.</inlineHelpText>
    <label>City</label>
    <length>28</length>
    <type>Text</type>
</CustomField>