force-app/main/default/objects/Location__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Captures comments about a location.</description>
    <inlineHelpText>Here you can add any information about this location that isn&#39;t covered elsewhere on the page.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>