force-app/main/default/objects/Location__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>Captures the county of a location.</description>
    <label>County</label>
    <length>40</length>
    <type>Text</type>
</CustomField>