force-app/main/default/objects/Location__c/fields/Handicap_Accessible__c.field-meta.xml
<CustomField>
    <fullName>Handicap_Accessible__c</fullName>
    <description>Captures whether a location is handicap accessible.</description>
    <inlineHelpText>Is this location handicap accessible?</inlineHelpText>
    <label>Handicap Accessible</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>