force-app/main/default/objects/Location__c/fields/Host_Id__c.field-meta.xml
<CustomField>
    <fullName>Host_Id__c</fullName>
    <displayFormat>L{00000}</displayFormat>
    <inlineHelpText>Enter unique identifier for your location</inlineHelpText>
    <label>Location ID</label>
    <type>AutoNumber</type>
</CustomField>