force-app/main/default/objects/Location__c/fields/Location_Hours__c.field-meta.xml
<CustomField>
    <fullName>Location_Hours__c</fullName>
    <description>Hours of operation for a location.</description>
    <inlineHelpText>Enter the hours of operation for this location.</inlineHelpText>
    <label>Location Hours</label>
    <type>TextArea</type>
</CustomField>