force-app/main/default/objects/Location__c/fields/Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Id__c</fullName>
    <description>External ID for Location</description>
    <externalId>true</externalId>
    <inlineHelpText>Id generated for unique locations</inlineHelpText>
    <label>Location External Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>