force-app/main/default/objects/Location__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <description>Captures the location type of a particular location.</description>
    <inlineHelpText>Select the location type that best describes this location.</inlineHelpText>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AARP Chapter</fullName>
            </value>
            <value>
                <fullName>Bank/Credit Union</fullName>
            </value>
            <value>
                <fullName>City/County Government/Chamber of Commerce</fullName>
            </value>
            <value>
                <fullName>Elks/Kiwanis/Lions/Moose/Rotary Club</fullName>
            </value>
            <value>
                <fullName>Funeral Home</fullName>
            </value>
            <value>
                <fullName>Hospital/HMO/Physician&#39;s Office</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
            <value>
                <fullName>Local Business</fullName>
            </value>
            <value>
                <fullName>Local Insurance Agent</fullName>
            </value>
            <value>
                <fullName>Military/Veteran Organization</fullName>
            </value>
            <value>
                <fullName>Park/Recreation or Community Center</fullName>
            </value>
            <value>
                <fullName>Place of Worship</fullName>
            </value>
            <value>
                <fullName>Police/Sheriff/Fire/EMS</fullName>
            </value>
            <value>
                <fullName>Red Cross</fullName>
            </value>
            <value>
                <fullName>Retired Teachers Association</fullName>
            </value>
            <value>
                <fullName>RV/Mobile Home Park</fullName>
            </value>
            <value>
                <fullName>Salvation Army</fullName>
            </value>
            <value>
                <fullName>School/Educational Institution</fullName>
            </value>
            <value>
                <fullName>Senior Center</fullName>
            </value>
            <value>
                <fullName>YMCA/YWCA</fullName>
            </value>
            <value>
                <fullName>Residential/Retirement Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>