force-app/main/default/objects/Location__c/fields/Parking_on_Site__c.field-meta.xml
<CustomField>
    <fullName>Parking_on_Site__c</fullName>
    <description>Captures whether there is parking on site for a location.</description>
    <inlineHelpText>Does this location have parking on site?</inlineHelpText>
    <label>Parking on Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>