force-app/main/default/objects/Location__c/fields/Partner_Organization__c.field-meta.xml
<CustomField>
    <fullName>Partner_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ties a location to its associated partner organization.</description>
    <inlineHelpText>Search for and select the partner organization that this location is associated with.</inlineHelpText>
    <label>Partner Organization</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>