force-app/main/default/objects/Location__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Location&#39;s postal code.</description>
    <inlineHelpText>Enter the location&#39;s postal code.</inlineHelpText>
    <label>Postal Code</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>