force-app/main/default/objects/Location__c/fields/Session_Location__c.field-meta.xml
<CustomField>
    <fullName>Session_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required to have the location data to be available for selection as session location within the LMS.</description>
    <label>Session Location</label>
    <referenceTo>lmsilt__Session_Location__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>