force-app/main/default/objects/Location__c/fields/Standardization_Retry__c.field-meta.xml
<CustomField>
    <fullName>Standardization_Retry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify the failed records while processing AAI Services</description>
    <label>Standardization Retry</label>
    <type>Checkbox</type>
</CustomField>