force-app/main/default/objects/Location__c/fields/Technology_Available__c.field-meta.xml
<CustomField>
    <fullName>Technology_Available__c</fullName>
    <description>Captures technology available at a location.</description>
    <inlineHelpText>Select the technology that AARP has access to at this location. If multiple technologies are available, select all that apply (you can select multiple values at once by holding down CTRL as you select each value).</inlineHelpText>
    <label>Technology Available</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Computer (Single)</fullName>
            </value>
            <value>
                <fullName>Computer Room</fullName>
            </value>
            <value>
                <fullName>Internet Access</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
            <value>
                <fullName>Projector</fullName>
            </value>
            <value>
                <fullName>TV/DVD Player</fullName>
            </value>
            <value>
                <fullName>TV/VCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>