force-app/main/default/objects/Location__c/validationRules/Prevent_Character_from_Displaying.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Character_from_Displaying</fullName>
    <active>true</active>
    <description>Created to prevent the character &#39;|&#39; from being entered in a location name field.</description>
    <errorConditionFormula>OR(
CONTAINS( Name,  &quot;|&quot;),
 CONTAINS( Address_Line_1__c , &quot;|&quot;), 
 CONTAINS( Address_Line_2__c , &quot;|&quot;) ,
 CONTAINS( Address_Line_3__c , &quot;|&quot;), 
 CONTAINS( City__c , &quot;|&quot;), 
 CONTAINS( County__c , &quot;|&quot;), 
 CONTAINS( Session_Location__c , &quot;|&quot;), 
 CONTAINS( Postal_Code__c , &quot;|&quot;),
 CONTAINS( Address_Error__c , &quot;|&quot;),
 CONTAINS( Comments__c , &quot;|&quot;))</errorConditionFormula>
    <errorMessage>&#39;|&#39; character cannot be included within the location record</errorMessage>
</ValidationRule>