force-app/main/default/objects/Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Host_Id__c</columns>
    <columns>Address_Line_1__c</columns>
    <columns>Address_Line_2__c</columns>
    <columns>City__c</columns>
    <columns>State_Territory__c</columns>
    <columns>Postal_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>