force-app/main/default/objects/Location__c/listViews/Locations_AK.listView-meta.xml
<ListView>
    <fullName>Locations_AK</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>State_Territory__c</columns>
    <columns>Host_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State_Territory__c</field>
        <operation>equals</operation>
        <value>AK</value>
    </filters>
    <label>Locations: AK</label>
</ListView>