force-app/main/default/objects/Location__c/listViews/Locations_AR.listView-meta.xml
<ListView>
    <fullName>Locations_AR</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>State_Territory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State_Territory__c</field>
        <operation>equals</operation>
        <value>AR</value>
    </filters>
    <label>Locations: AR</label>
</ListView>