force-app/main/default/objects/Location__c/listViews/Locations_CA.listView-meta.xml
<ListView>
    <fullName>Locations_CA</fullName>
    <columns>NAME</columns>
    <columns>Host_Id__c</columns>
    <columns>City__c</columns>
    <columns>State_Territory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State_Territory__c</field>
        <operation>equals</operation>
        <value>CA</value>
    </filters>
    <label>Locations: CA</label>
</ListView>