force-app/main/default/objects/Location__c/listViews/Locations_DC.listView-meta.xml
<ListView>
    <fullName>Locations_DC</fullName>
    <columns>NAME</columns>
    <columns>Host_Id__c</columns>
    <columns>Address_Line_1__c</columns>
    <columns>City__c</columns>
    <columns>State_Territory__c</columns>
    <columns>Postal_Code__c</columns>
    <columns>County__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State_Territory__c</field>
        <operation>equals</operation>
        <value>DC</value>
    </filters>
    <label>Locations: DC</label>
</ListView>