force-app/main/default/objects/Location__c/listViews/Locations_DE.listView-meta.xml
<ListView>
    <fullName>Locations_DE</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>State_Territory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State_Territory__c</field>
        <operation>equals</operation>
        <value>DE</value>
    </filters>
    <label>Locations: DE</label>
</ListView>